--- a/Sex8BlockExtension/Sex8BlockExtension/Info.plist
+++ b/Sex8BlockExtension/Sex8BlockExtension/Info.plist
@@ -24,6 +24,11 @@
 	<string>public.app-category.utilities</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2017年 ascp. All rights reserved.</string>
 	<key>NSMainStoryboardFile</key>
