1. inject css zoom image size

--- a/Sex8BlockExtension/Torrilste/Info.plist
+++ b/Sex8BlockExtension/Torrilste/Info.plist
@@ -31,6 +31,13 @@
 	</dict>
 	<key>NSExtension</key>
 	<dict>
+		<key>SFSafariStyleSheet</key>
+		<array>
+			<dict>
+				<key>Style Sheet</key>
+				<string>inject.css</string>
+			</dict>
+		</array>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.Safari.extension</string>
 		<key>NSExtensionPrincipalClass</key>
