--- a/Sex8BlockExtension/Torrilste/Info.plist
+++ b/Sex8BlockExtension/Torrilste/Info.plist
@@ -46,6 +46,10 @@
 		<array>
 			<dict>
 				<key>Script</key>
+				<string>fetch.js</string>
+			</dict>
+			<dict>
+				<key>Script</key>
 				<string>script.js</string>
 			</dict>
 		</array>
