1. hide upload and login feature。 2. add crash reports 3. first release！try it！

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "CryptoSwift"]
 	path = CryptoSwift
 	url = https://github.com/krzyzanowskim/CryptoSwift.git
+[submodule "Sex8BlockExtension/KSCrash"]
+	path = Sex8BlockExtension/KSCrash
+	url = https://github.com/kstenerud/KSCrash.git
