--- a/Sex8BlockExtension/Sex8BlockExtension/Sex8BlockExtension.entitlements
+++ b/Sex8BlockExtension/Sex8BlockExtension/Sex8BlockExtension.entitlements
@@ -10,6 +10,8 @@
 	</array>
 	<key>com.apple.security.assets.pictures.read-write</key>
 	<true/>
+	<key>com.apple.security.files.downloads.read-write</key>
+	<true/>
 	<key>com.apple.security.files.user-selected.read-write</key>
 	<true/>
 	<key>com.apple.security.network.client</key>
