--- a/Sex8BlockExtension/ADBlock/Info.plist
+++ b/Sex8BlockExtension/ADBlock/Info.plist
@@ -32,6 +32,6 @@
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2017年 ascp. All rights reserved.</string>
 	<key>NSHumanReadableDescription</key>
-	<string>This Block Extension just block sex8.cc AD.</string>
+	<string>This blocker just block sex8.cc AD.</string>
 </dict>
 </plist>
