--- a/Sex8BlockExtension/Torrilste/Info.plist
+++ b/Sex8BlockExtension/Torrilste/Info.plist
@@ -69,6 +69,7 @@
 			<key>Allowed Domains</key>
 			<array>
 				<string>*.xbluntan.net</string>
+				<string>*.mote8didi.info</string>
 				<string>*.sex8.cc</string>
 			</array>
 			<key>Level</key>
