--- a/Sex8BlockExtension/CloudFetchBot/CloudFetchBot.entitlements
+++ b/Sex8BlockExtension/CloudFetchBot/CloudFetchBot.entitlements
@@ -14,6 +14,8 @@
 	<string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
+	<key>com.apple.security.files.downloads.read-write</key>
+	<true/>
 	<key>com.apple.security.files.user-selected.read-only</key>
 	<true/>
 	<key>com.apple.security.network.client</key>
