update fetch site

--- a/Sex8BlockExtension/Torrilste/Info.plist
+++ b/Sex8BlockExtension/Torrilste/Info.plist
@@ -69,7 +69,7 @@
 			<key>Allowed Domains</key>
 			<array>
 				<string>*.sex8.cc</string>
-				<string>*.kongjie18.info</string>
+				<string>*.quball.space</string>
 			</array>
 			<key>Level</key>
 			<string>Some</string>
