--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,8 @@ Pods/
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
 # Carthage/Checkouts
 
-Carthage/Build
+Carthage
+*.resolved
 
 # fastlane
 #
