--- a/Sex8BlockExtension/Torrilste/Torrilste.entitlements
+++ b/Sex8BlockExtension/Torrilste/Torrilste.entitlements
@@ -6,7 +6,7 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>com.kmvc.group.safari</string>
+		<string>$(TeamIdentifierPrefix)ascp.netdisk</string>
 	</array>
 	<key>com.apple.security.files.user-selected.read-write</key>
 	<true/>
